refactor integration tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -62,7 +62,11 @@ testing =
     requests-mock
     fsspec
     timeflake
-    pyspark>=3.0.0
+    %(transforms)s
+integration-testing =
+    %(testing)s
+    dask
+    fastparquet
 
 [options.entry_points]
 fsspec.specs =
