--- a/setup.cfg
+++ b/setup.cfg
@@ -24,7 +24,10 @@ classifiers =
     Development Status :: 5 - Production/Stable
     Programming Language :: Python
     License :: OSI Approved :: Apache Software License
-
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
 
 [options]
 zip_safe = False
@@ -34,7 +37,6 @@ package_dir =
     =src
 # Add here dependencies of your project (semicolon/line-separated), e.g.
 install_requires =
-    importlib-metadata; python_version<"3.8"
     pyarrow
     pandas
     requests
