--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,3 @@
-# This file is used to configure your project.
-# Read more about the various options under:
-# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
-
 [metadata]
 name = foundry-dev-tools
 description = Seamlessly run your Palantir Foundry Repository transforms code on your local machine.
@@ -16,7 +12,8 @@ url = https://github.com/emdgroup/foundry-dev-tools
 project_urls =
     Documentation = https://emdgroup.github.io/foundry-dev-tools
     Source = https://github.com/emdgroup/foundry-dev-tools
-# Change if running only on Windows, Mac or Linux (comma-separated)
+    Tracker = https://github.com/emdgroup/foundry-dev-tools/issues
+    Changelog = https://emdgroup.github.io/foundry-dev-tools/changelog.html
 platforms = any
 # Add here all kinds of additional classifiers as defined under
 # https://pypi.python.org/pypi?%3Aaction=list_classifiers
@@ -28,6 +25,11 @@ classifiers =
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
+    Intended Audience :: Developers
+    Operating System :: POSIX :: Linux
+    Operating System :: MacOS
+    Operating System :: Microsoft :: Windows
+    Topic :: Scientific/Engineering :: Information Analysis
 
 [options]
 zip_safe = False
@@ -35,7 +37,6 @@ packages = find_namespace:
 include_package_data = True
 package_dir =
     =src
-# Add here dependencies of your project (semicolon/line-separated), e.g.
 install_requires =
     pyarrow
     pandas
@@ -43,9 +44,6 @@ install_requires =
     fs
     backoff
     palantir-oauth-client
-# The usage of test_requires is discouraged, see `Dependency Management` docs
-# tests_require = pytest; pytest-cov
-# Require a specific Python version, e.g. Python 2.7 or >= 3.4
 python_requires = >=3.8,<4.0
 
 [options.packages.find]
@@ -77,15 +75,9 @@ fsspec.specs =
     foundry = foundry_dev_tools.fsspec_impl.FoundryFileSystem
 
 [test]
-# py.test options when running `python setup.py test`
-# addopts = --verbose
 extras = True
 
 [tool:pytest]
-# Options for py.test:
-# Specify command line options as you would do when invoking py.test directly.
-# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
-# in order to write a coverage file that can be read by Jenkins.
 addopts =
     --cov=src --cov-report term --cov-report xml:coverage.xml --cov-report html:htmlcov
     --verbose
@@ -110,7 +102,6 @@ no-vcs = 1
 formats = bdist_wheel
 
 [flake8]
-# Some sane defaults for the code style checker flake8
 exclude =
     .tox
     build
