--- a/setup.cfg
+++ b/setup.cfg
@@ -79,7 +79,7 @@ extras = True
 
 [tool:pytest]
 addopts =
-    --cov=src --cov-report term --cov-report xml:coverage.xml --cov-report html:htmlcov
+#    --cov=src --cov-report term --cov-report xml:coverage.xml --cov-report html:htmlcov
     --verbose
 norecursedirs =
     dist
