restrict pandas < 2, as pyspark has problems with pandas v2

--- a/setup.cfg
+++ b/setup.cfg
@@ -39,7 +39,7 @@ package_dir =
     =src
 install_requires =
     pyarrow
-    pandas
+    pandas < 2 # until pyspark supports v2 or also sets this limitation
     requests
     fs
     backoff
