--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,5 @@
 # Tox configuration file
 # Read more under https://tox.wiki/
-# THIS SCRIPT IS SUPPOSED TO BE AN EXAMPLE. MODIFY IT ACCORDING TO YOUR NEEDS!
 
 [tox]
 minversion = 3.24
@@ -16,7 +15,9 @@ passenv =
     HOME
     SETUPTOOLS_*
 extras =
-    integration-testing
+    integration
+    testing
+    transforms
 commands =
     pytest {posargs}
 
