support pandas >=2 again as pyspark supports it now, this also enables python 3.11 support

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,7 @@ classifiers =
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
     Intended Audience :: Developers
     Operating System :: POSIX :: Linux
     Operating System :: MacOS
@@ -39,7 +40,7 @@ package_dir =
     =src
 install_requires =
     pyarrow
-    pandas < 2 # until pyspark supports v2 or also sets this limitation
+    pandas
     requests
     fs
     backoff
