--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,15 +4,15 @@ repos:
   hooks:
   - id: mixed-line-ending
     args: ['--fix=lf']  # replace 'auto' with 'lf' to enforce Linux/Mac line endings or 'crlf' for Windows
+- repo: https://github.com/charliermarsh/ruff-pre-commit
+  # Ruff version.
+  rev: 'v0.0.261'
+  hooks:
+    - id: ruff
+      args: ["--fix","--exit-non-zero-on-fix","--show-fixes"]
 - repo: https://github.com/psf/black
   rev: 23.3.0
   hooks:
     - id: black
       # max support version of foundry-dev-tools
       language_version: python3.11
-- repo: https://github.com/charliermarsh/ruff-pre-commit
-  # Ruff version.
-  rev: 'v0.0.261'
-  hooks:
-    - id: ruff
-      args: ["--fix"]
