--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -25,7 +25,7 @@ jobs:
         with: {python-version: "3.11"}
       - name: Build Docs
         run: >-
-          pipx run tox -e docs
+          tox -e docs
       - name: Upload docs artifact
         uses: actions/upload-pages-artifact@v1
         with:
