run both python versions test no matter what

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,6 +51,7 @@ jobs:
   test:
     needs: prepare
     strategy:
+      fail-fast: false # always test both versions
       matrix:
         python:
         - "3.8"
