--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,22 +4,15 @@ repos:
   hooks:
   - id: mixed-line-ending
     args: ['--fix=lf']  # replace 'auto' with 'lf' to enforce Linux/Mac line endings or 'crlf' for Windows
-- repo: https://github.com/omnilib/ufmt
-  rev: v2.0.0
+- repo: https://github.com/charliermarsh/ruff-pre-commit
+  # Ruff version.
+  rev: 'v0.0.262'
   hooks:
-    - id: ufmt
-      additional_dependencies:
-        - black == 22.6.0
-        - usort == 1.0.4
--   repo: local
-    hooks:
-    -   id: pylint
-        name: pylint
-        entry: pylint
-        language: system
-        types: [python]
-        args: [
-        "-rn",
-       "-sn"
-        ]
-        exclude: "tests|docs"
+    - id: ruff
+      args: ["--fix","--exit-non-zero-on-fix","--show-fixes"]
+- repo: https://github.com/psf/black
+  rev: 23.3.0
+  hooks:
+    - id: black
+      # max support version of foundry-dev-tools
+      language_version: python3.11
