--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,10 @@
 # Tox configuration file
 # Read more under https://tox.wiki/
-# THIS SCRIPT IS SUPPOSED TO BE AN EXAMPLE. MODIFY IT ACCORDING TO YOUR NEEDS!
 
 [tox]
 minversion = 3.24
 envlist = default
 isolated_build = True
-
 
 [testenv]
 description = Invoke pytest to run automated tests
@@ -16,13 +14,11 @@ passenv =
     HOME
     SETUPTOOLS_*
 extras =
-    integration-testing
+    testing
+    transforms
 commands =
     pytest {posargs}
 
-
-# To run `tox -e lint` you need to make sure you have a
-# `.pre-commit-config.yaml` file. See https://pre-commit.com
 [testenv:lint]
 description = Perform static analysis and style checks
 skip_install = True
@@ -33,7 +29,6 @@ passenv =
     SETUPTOOLS_*
 commands =
     pre-commit run --all-files {posargs:--show-diff-on-failure}
-
 
 [testenv:{build,clean}]
 description =
@@ -50,7 +45,6 @@ commands =
     clean: python -c 'import shutil; [shutil.rmtree(p, True) for p in ("build", "dist", "docs/_build")]'
     clean: python -c 'import pathlib, shutil; [shutil.rmtree(p, True) for p in pathlib.Path("src").glob("*.egg-info")]'
     build: python -m build {posargs}
-
 
 [testenv:{docs,doctests,linkcheck}]
 description =
@@ -83,7 +77,6 @@ deps =
     -r {toxinidir}/docs/requirements.txt
 commands =
     sphinx-autobuild --ignore '{env:DOCSDIR}/api/**' "{env:DOCSDIR}" "{env:BUILDDIR}" {posargs}
-
 
 [testenv:publish]
 description =
