fix test import, run "not integration" explicitly in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,7 +73,7 @@ jobs:
       - name: Run tests
         run: >-
           tox --installpkg '${{ needs.prepare.outputs.wheel-distribution }}'
-          -- -rFEx --durations 10 --color yes  # pytest args
+          -- -rFEx --durations 10 --color yes -m "not integration"  # pytest args
 
   publish:
     needs: test
