fix aiobotocore dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,7 +57,7 @@ testing = [
 ]
 transforms = ["pyspark>=3.0.0"]
 cli = ["click", "inquirer", "websockets", "rich", "packaging"]
-s3 = ["boto3", "aiobotocore"]
+s3 = ["aiobotocore[boto3]"]
 
 [project.urls]
 Homepage = "https://emdgroup.github.io/foundry-dev-tools"
