--- a/tox.ini
+++ b/tox.ini
@@ -14,11 +14,7 @@ passenv =
     HOME
     SETUPTOOLS_*
 extras =
-    testing
-    transforms
-    cli
-    integration
-    s3
+    complete
 commands =
     pytest {posargs}
 
