--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,7 @@ on:
       - 'LICENSE'
       - 'README.md'
       - '.github/ISSUE_TEMPLATE/**'
+      - '.github/pull_request_template.md'
       - '.gitignore'
   pull_request:  # Run in every PR
     paths-ignore:
@@ -15,6 +16,7 @@ on:
       - 'LICENSE'
       - 'README.md'
       - '.github/ISSUE_TEMPLATE/**'
+      - '.github/pull_request_template.md'
       - '.gitignore'
   workflow_dispatch:  # Allow manually triggering the workflow
   schedule:
