fix: accidentally commented out the test dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,17 +21,17 @@ dev = [
   "pre-commit",
   "ruff",
   "pytest",
-  # "pyarrow",
-  # "pandas",
-  # "pytest",
-  # "pytest-mock",
-  # "freezegun",
-  # "pytest-asyncio",
-  # "requests-mock",
-  # "polars",
-  # "pyfakefs",
-  # "dask",
-  # "fastparquet",
+  "pyarrow",
+  "pandas",
+  "pytest",
+  "pytest-mock",
+  "freezegun",
+  "pytest-asyncio",
+  "requests-mock",
+  "polars",
+  "pyfakefs",
+  "dask",
+  "fastparquet",
 ]
 
 [tool.pdm.scripts]
