fix: docs workflow write permissions

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -42,7 +42,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      # pages: write
+      pages: write
       id-token: write
     environment:
       name: github-pages
