--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,23 +4,25 @@ on:
   push:
     branches:
       - main
-    paths-ignore:
-      - 'docs/**'
-      - 'LICENSE'
-      - 'README.md'
-      - '.github/ISSUE_TEMPLATE/**'
-      - '.github/pull_request_template.md'
-      - '.gitignore'
+    paths:
+      - '**'
+      - '!docs/**'
+      - '!LICENSE'
+      - '!README.md'
+      - '!.github/**'
+      - '.github/workflows/ci.yml' # include this workflow
+      - '!.gitignore'
   pull_request: 
     branches:
       - main
-    paths-ignore:
-      - 'docs/**'
-      - 'LICENSE'
-      - 'README.md'
-      - '.github/ISSUE_TEMPLATE/**'
-      - '.github/pull_request_template.md'
-      - '.gitignore'
+    paths:
+      - '**'
+      - '!docs/**'
+      - '!LICENSE'
+      - '!README.md'
+      - '!.github/**'
+      - '.github/workflows/ci.yml' # include this workflow
+      - '!.gitignore'
   workflow_dispatch:  # Allow manually triggering the workflow
   schedule:
     # Run roughly every 15 days at 00:00 UTC
