--- a/libs/transforms/pyproject.toml
+++ b/libs/transforms/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "pdm.backend"
 
 [project]
 name = "foundry-dev-tools-transforms"
-readme = "../../README.md"
+readme = "README.md"
 description = "Seamlessly run your Palantir Foundry Repository transforms code on your local machine."
 requires-python = ">=3.10"
 authors = [
