--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,6 +33,7 @@ jobs:
       contents: read
       # IMPORTANT: this permission is mandatory for trusted publishing
       id-token: write
+    environment: release
     steps:
       - uses: actions/checkout@v3
       - uses: pdm-project/setup-pdm@v4
